# ros2-bridge-msgs-srvs

./: README.md
1.ros_vanilla_bridge_test/: How_to_bridge.txt
1.ros_vanilla_bridge_test/ros1_foxy_bridge/: 0.build_bridge.sh  Dockerfile
1.ros_vanilla_bridge_test/ros1_listener/: 0.roscore.sh  1.roslaunch.sh  Dockerfile
1.ros_vanilla_bridge_test/ros1_talker/: 1.roslaunch.sh  Dockerfile
2.ros_custom_bridge_test/1.ros_workspaces_1 (custom message with all fields having same names)/: 0.build.sh  Dockerfile  bridge_build.sh  bridge_run.sh  ros1_build.sh  ros1_roscore.sh  ros1_run.sh  ros2_build.sh  ros2_run.sh
2.ros_custom_bridge_test/1.ros_workspaces_1 (custom message with all fields having same names)/ros2/: Dockerfile
2.ros_custom_bridge_test/2.ros_workspaces_2 (custom message with one field mapping)/: 03.bridge_build.sh
2.ros_custom_bridge_test/2.ros_workspaces_2 (custom message with one field mapping)/ros1/catkin_ws/src/ros1_listener/: CMakeLists.txt
2.ros_custom_bridge_test/2.ros_workspaces_2 (custom message with one field mapping)/ros1/catkin_ws/src/ros1_listener/src/: ros1_listener.cpp
2.ros_custom_bridge_test/3.ros_workspaces_2 (custom message with all field mappings)/: 01.ros1_build.sh  13.bridge_run.sh  Dockerfile
2.ros_custom_bridge_test/3.ros_workspaces_2 (custom message with all field mappings)/bridge/: Dockerfile
2.ros_custom_bridge_test/4.ros_workspaces_2 (custom message with all field mappings+prebuilt bridge)/: 00.build.sh  14.ros1_run.sh
2.ros_custom_bridge_test/5.ros_workspaces_2 (custom message with all field mappings+prebuilt bridge+remove isolated stuff)/: 03.bridge_build.sh  12.ros2_run.sh  Dockerfile
2.ros_custom_bridge_test/6.ros_workspaces_proper/: 01.ros1_build.sh  02.ros2_build.sh  11.ros1_roscore.sh  Dockerfile
3.ros_custom_bridge_and_vanilla_setup_test_msgs/: play instructions
3.ros_custom_bridge_and_vanilla_setup_test_msgs/custom_bridge_docker/: 13.bridge_run.sh  14.ros1_run.sh  Dockerfile
3.ros_custom_bridge_and_vanilla_setup_test_msgs/ros1_out_docker/: 1.roslaunch.sh
3.ros_custom_bridge_and_vanilla_setup_test_msgs/ros1_out_docker/ros1_out/: CMakeLists.txt
3.ros_custom_bridge_and_vanilla_setup_test_msgs/ros1_out_docker/ros1_out/include/: ros1_out.h
3.ros_custom_bridge_and_vanilla_setup_test_msgs/ros1_out_docker/ros1_out/launch/: ros1_out.launch
3.ros_custom_bridge_and_vanilla_setup_test_msgs/ros1_out_docker/ros1_out/src/: ros1_out.cpp
3.ros_custom_bridge_and_vanilla_setup_test_msgs/ros2_out_docker/: 2.ros2run_listener.sh  Dockerfile
3.ros_custom_bridge_and_vanilla_setup_test_msgs/ros2_out_docker/ros2_out/: CMakeLists.txt
4.ros_custom_bridge_and_vanilla_setup_test_srvs/: play instructions
4.ros_custom_bridge_and_vanilla_setup_test_srvs/custom_bridge_docker/: history_command_output_after_docker_build.txt
4.ros_custom_bridge_and_vanilla_setup_test_srvs/custom_bridge_docker/ros1_pkgs/ros1_talker/: CMakeLists.txt  package.xml
4.ros_custom_bridge_and_vanilla_setup_test_srvs/custom_bridge_docker/ros1_pkgs/ros1_talker/include/: ros1_talker.h
4.ros_custom_bridge_and_vanilla_setup_test_srvs/custom_bridge_docker/ros1_pkgs/ros1_talker/src/: ros1_talker.cpp
4.ros_custom_bridge_and_vanilla_setup_test_srvs/custom_bridge_docker/ros2_pkgs/cpp_pubsub/: CMakeLists.txt  package.xml
4.ros_custom_bridge_and_vanilla_setup_test_srvs/custom_bridge_docker/ros2_pkgs/cpp_pubsub/src/: subscriber_member_function_custom_srv.cpp
4.ros_custom_bridge_and_vanilla_setup_test_srvs/custom_bridge_docker/ros2_pkgs/cpp_pubsub/srv/: my_mapping_rules.yaml
4.ros_custom_bridge_and_vanilla_setup_test_srvs/ros1_out_docker/: Dockerfile
4.ros_custom_bridge_and_vanilla_setup_test_srvs/ros2_out_docker/: 1.ros2run_talker.sh  Dockerfile
(+27 files in other folders)
